# cascade

./: .gitignore  LICENSE  README.md  claude.md  pyproject.toml
.github/workflows/: ci.yml
docs/: failure_models.md  interpreting_results.md  strategies.md
examples/: coding_pipeline.py  customer_support.py  demo.py  research_pipeline.py
src/cascade/: __init__.py  cli.py  comparator.py  cost_model.py  failures.py  pipeline.py  report.py  simulator.py  stats.py  strategies.py
tests/: conftest.py  test_cli.py  test_comparator.py  test_cost_model.py  test_failures.py  test_integration.py  test_pipeline.py  test_report.py  test_simulator.py  test_stats.py  test_strategies.py
