[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cascade-agent-sim"
version = "0.1.0"
description = "Agent reliability simulator — chaos engineering for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Cascade Contributors" },
]
keywords = [
    "ai",
    "agents",
    "chaos-engineering",
    "reliability",
    "simulation",
    "monte-carlo",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Testing",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "numpy>=1.24,<3.0",
    "scipy>=1.11,<2.0",
    "rich>=13.0,<14.0",
    "matplotlib>=3.7,<4.0",
    "click>=8.0,<9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4.0",
    "mypy>=1.8",
]

[project.scripts]
cascade = "cascade.cli:main"

[project.urls]
Homepage = "https://github.com/sushaan-k/cascade"
Repository = "https://github.com/sushaan-k/cascade"
Issues = "https://github.com/sushaan-k/cascade/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cascade"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "RUF",
]
ignore = [
    "E501",
]

[tool.ruff.lint.isort]
known-first-party = ["cascade"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = ["scipy", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
